--- a/frontend/retenciones/src/app/menu/menu.component.html
+++ b/frontend/retenciones/src/app/menu/menu.component.html
@@ -7,15 +7,63 @@
     <a style="font-size: xx-small;" align="right">USUARIO: {{this.usuario}} / PERFIL: {{this.perfil}} </a>
   </mat-toolbar>
 
-  <mat-sidenav-container class="example-sidenav-container">
-    <mat-sidenav #snav style="height: 100%; weight:100%;">
-      <mat-nav-list>
-        <a mat-list-item *ngFor="let item of Menu" [routerlink]="{{item.menuruta}}" (click)="snav.toggle()">
-            <mat-icon>{{item.menuicono}}</mat-icon> <span class="nav-caption">{{item.menunombre}}</span>
-        </a>
-        <a mat-list-item routerLink="#" (click)="onSidenavClose()">
-            <mat-icon>closed</mat-icon><span class="nav-caption">Salir</span>
-        </a>
+  <mat-sidenav-container class="example-sidenav-container"> 
+    <mat-sidenav class="mat-toolbar mat-primary" #snav style="height: 100%; weight:100%;">
+      <mat-nav-list class="example-toolbar mat-toolbar mat-primary mat-toolbar-single-row">
+          <button mat-menu-item [matMenuTriggerFor]="vertebrates">
+            <mat-icon style="color:aliceblue;">settings</mat-icon>
+            <span style="color:aliceblue;">Configuracion</span>
+            <mat-icon style="color:aliceblue;">last_page</mat-icon></button>
+          <button mat-menu-item (click)="snav.toggle()">
+            <mat-icon style="color:aliceblue;">event_note</mat-icon>
+            <span style="color:aliceblue;">Solicitud</span></button>
+          <button mat-menu-item (click)="onSidenavClose()"><mat-icon style="color:aliceblue;">power_setting</mat-icon>
+            <span style="color:aliceblue;">Salir</span></button>
+
+        <mat-menu #vertebrates="matMenu">
+          <button mat-menu-item (click)="snav.toggle()">
+            <mat-icon style="color: #3f51b5;">account_circle</mat-icon>
+            <span style="color: #3f51b5;">usuario</span></button>
+          <button mat-menu-item (click)="snav.toggle()"><mat-icon style="color: #3f51b5;">supervised_user_circle</mat-icon>
+            <span style="color: #3f51b5;">Perfiles y Funciones</span></button>
+          <button mat-menu-item (click)="snav.toggle()"><mat-icon style="color: #3f51b5;">important_devices</mat-icon>
+            <span style="color: #3f51b5;">Pantalla</span></button>
+          <button mat-menu-item (click)="snav.toggle()"><mat-icon style="color: #3f51b5;">receipt</mat-icon>
+            <span style="color: #3f51b5;">Maestro Tablas</span></button>
+        </mat-menu>
+        
+        <mat-menu #invertebrates="matMenu">
+          <button mat-menu-item>Insects</button>
+          <button mat-menu-item>Molluscs</button>
+          <button mat-menu-item>Crustaceans</button>
+          <button mat-menu-item>Corals</button>
+          <button mat-menu-item>Arachnids</button>
+          <button mat-menu-item>Velvet worms</button>
+          <button mat-menu-item>Horseshoe crabs</button>
+        </mat-menu>
+        
+        <mat-menu #fish="matMenu">
+          <button mat-menu-item>Baikal oilfish</button>
+          <button mat-menu-item>Bala shark</button>
+          <button mat-menu-item>Ballan wrasse</button>
+          <button mat-menu-item>Bamboo shark</button>
+          <button mat-menu-item>Banded killifish</button>
+        </mat-menu>
+        
+        <mat-menu #amphibians="matMenu">
+          <button mat-menu-item>Sonoran desert toad</button>
+          <button mat-menu-item>Western toad</button>
+          <button mat-menu-item>Arroyo toad</button>
+          <button mat-menu-item>Yosemite toad</button>
+        </mat-menu>
+        
+        <mat-menu #reptiles="matMenu">
+          <button mat-menu-item>Banded Day Gecko</button>
+          <button mat-menu-item>Banded Gila Monster</button>
+          <button mat-menu-item>Black Tree Monitor</button>
+          <button mat-menu-item>Blue Spiny Lizard</button>
+          <button mat-menu-item disabled>Velociraptor</button>
+        </mat-menu>
       </mat-nav-list>
     </mat-sidenav>
     
