--- a/frontend/retencion/src/app/maestrocargas/maestrocargas.component.css
+++ b/frontend/retencion/src/app/maestrocargas/maestrocargas.component.css
@@ -238,13 +238,12 @@
     You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
 		*/
 		td:nth-of-type(1):before { content: "ID LOTE"; }
-		td:nth-of-type(2):before { content: "TIPO DE SOLICITUD"; }
-		td:nth-of-type(3):before { content: "TIPO DE REGISTRO"; }
-		td:nth-of-type(4):before { content: "TIPO DE INGRESO"; }
-		td:nth-of-type(5):before { content: "TIPO DE CARGA"; }
-		td:nth-of-type(6):before { content: "# IMPLICADOS"; }
-		td:nth-of-type(7):before { content: "USUARIO"; }
-		td:nth-of-type(8):before { content: "FECHA Y HORA"; }
+        td:nth-of-type(2):before { content: "RUTA"; }
+        td:nth-of-type(3):before { content: "SOLICITUDES"; }
+        td:nth-of-type(4):before { content: "IMPLICADOS"; }
+		td:nth-of-type(5):before { content: "FECHA DE REGISTRO"; }
+		td:nth-of-type(6):before { content: "HORA DE PROCESO"; }
+		td:nth-of-type(7):before { content: "HORA DE TERMINO"; }
+		td:nth-of-type(8):before { content: "USUARIO"; }
 		td:nth-of-type(9):before { content: "ESTADO"; }
-		td:nth-of-type(10):before { content: "ACCION"; }
 	}
